[package]
name = "learning-rust"
version = "0.1.0"
authors = ["acurzon <adam@curzon.org>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
rand = "0.8.4"
arboard = "3.3.1"
async-std = "1.10.0"

[build-dependencies]
slint-build = "1.4"
